<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND_COLOR"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HospitalPrefixActivity" >

    <EditText
        android:id="@+id/editTextHospitalPrefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hospital_Prefix_Hint"
        android:inputType="phone"
        android:textColor="@color/BLACK_TEXTCOLOR" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/Hospital_Prefix_Desc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/BLACK_TEXTCOLOR" />

    <ImageView
        android:id="@+id/imageViewHospitalPrefix"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/ic_dialog_info"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/Save"
        android:textColor="@color/BLACK_TEXTCOLOR" />

</LinearLayout>