<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DirectoryAddingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/buttonAddNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_orange"
            android:padding="10dp"
            android:text="@string/Add_Number"
            android:textColor="@color/WHITE_TEXTCOLOR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPhotographList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_orange"
            android:padding="10dp"
            android:text="@string/Photograph_list"
            android:textColor="@color/WHITE_TEXTCOLOR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEmailNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_orange"
            android:padding="10dp"
            android:text="@string/Email_number"
            android:textColor="@color/WHITE_TEXTCOLOR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_orange"
            android:padding="10dp"
            android:text="@string/Cancel"
            android:textColor="@color/WHITE_TEXTCOLOR"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>