<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND_COLOR"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf" />

        <com.hermes.induction.view.NotificationView
            android:id="@+id/notificationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayoutAddHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables" >

            <TextView
                android:id="@+id/textViewAddHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/Get_started_here"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#F25D05"
                android:textSize="40sp"
                android:textStyle="italic"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/imageViewAddHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_down_arrow"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/BLACK_BGCOLOR" >

            <ToggleButton
                android:id="@+id/toggleButtonDirectory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_bar_button"
                android:drawableTop="@drawable/ic_tab_list"
                android:padding="10dp"
                android:textColor="@color/WHITE_TEXTCOLOR"
                android:textOff="@string/Directory"
                android:textOn="@string/Directory"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" >
            </RelativeLayout>

            <ToggleButton
                android:id="@+id/toggleButtonQuickDial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_bar_button"
                android:drawableTop="@drawable/ic_tab_phone"
                android:padding="10dp"
                android:textColor="@color/WHITE_TEXTCOLOR"
                android:textOff="@string/Quick_Dial"
                android:textOn="@string/Quick_Dial"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_add"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_call"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</LinearLayout>